--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ email: babij.wm@gmail.com
 # If you do not use one of the following websites, then leave it empty
 # > twitter_username:
 github_username: WilliamMBabij
-codepen_username: @William-Babij
-dev_username: @williammbabij
+codepen_username: William-Babij
+dev_username: williammbabij
 linkedin_username: william-babij-6814b333
-twitter_username: @WMBabij
+twitter_username: WMBabij
 
 # ABOUT ME SECTION
 # show_aboutme_card:
