--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: Personal website powered by Jekyll
 url: "https://wmbabij.dev"
 # baseurl: The subpath of your site
 # > set this to "", if you renamed the repository to <user>.github.io
-baseurl: "/neumorphism"
+baseurl: ""
 
 # LANDING PAGE
 # username: This will displayed on the landing page as your name.
